--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title></title>
 </head>
 <body>
-  <header class="page-header">
+  <header class="page-header page-header--home">
     <div class="page-header__top">
       <div class="page-header__logo">
         <a href="#"><img src="images/upper-logo.svg"></a>
@@ -49,7 +49,7 @@
   <main class="page-content">
     <div class="wrapper">
       <section class="section section--top-offers">
-        <h2 class="section__title section__title--top-offers">Hand picked just for you</h2>
+        <h2 class="section__title section__title--top-offers">Hand picked <br> just for you</h2>
         <p class="primary-text primary-text--top-offers">Save up to 50-77%* OFF on Business and First Class Flights with SkyLux Travel. If you would like to lower travel costs for you or your business.</p>
         <h3 class="section__sub-title section__sub-title--top-offers">Our top Offers</h3>
         <ul class="section__top-offers-list">
